--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,38 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+
+@font-face {
+  font-family: "Pretendard_ExtraBold";
+  src: url("../public/fonts/Pretendard-ExtraBold.otf");
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: "Pretendard_Bold";
+  src: url("../public/fonts/Pretendard-Bold.otf");
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "Pretendard_Thin";
+  src: url("../public/fonts/Pretendard-Thin.otf");
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@font-face {
+  font-family: "Pretendard_Light";
+  src: url("../public/fonts/Pretendard-Light.otf");
+}
+@tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-Pretendard_ExtraBold text-8xl;
   }
-  body {
-    color: white;
-    background: black;
+  h3 {
+    @apply font-Pretendard_Bold text-lg;
+  }
+}
+
+@layer components {
+  .navbarBtn {
+    @apply text-white border-2 border-white border-opacity-0 hover:translate-y-1 transition-all hover:cursor-pointer tracking-wider;
   }
 }
